@@ -1,28 +1,31 @@
 package com.brandonitaly.bedrockskins;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
 
 public final class ServerSkinManager {
     private ServerSkinManager() {}
 
-    private static final Map<UUID, PlayerSkinData> playerSkins = new HashMap<>();
+    private static final Map<UUID, PlayerSkinData> playerSkins = new ConcurrentHashMap<>();
 
     public static void setSkin(UUID uuid, PlayerSkinData data) {
-        playerSkins.put(uuid, data);
+        if (uuid != null && data != null) {
+            playerSkins.put(uuid, data);
+        }
     }
 
     public static PlayerSkinData getSkin(UUID uuid) {
-        return playerSkins.get(uuid);
+        return uuid == null ? null : playerSkins.get(uuid);
     }
 
     public static void removeSkin(UUID uuid) {
-        playerSkins.remove(uuid);
+        if (uuid != null) {
+            playerSkins.remove(uuid);
+        }
     }
 
     public static Map<UUID, PlayerSkinData> getAllSkins() {
-        return Collections.unmodifiableMap(new HashMap<>(playerSkins));
+        return Map.copyOf(playerSkins);
     }
 }
